# geometrify-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  release.bash  rustfmt.toml
.github/workflows/: rust.yml
src/: geometrify.rs  lib.rs
