[package]
name = "geometrify"
version = "0.1.0"
authors = ["Marco Schlumpp <marco.schlumpp@gmail.com>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
image = "^0.24.2"
nanorand = { version = "^0.7.0", default-features = false, features = ["wyrand", "std"] }
rayon = "^1.5.3"
pbr = "^1.0.0"

[dependencies.clap]
version = "^3.1.18"
features = ["color"]

[profile.release]
lto = true
